@@ -89,7 +89,8 @@ var lmsServer = Vue.component('lms-server', {
                                        isPlaying: data.result.mode === "play" && !data.result.waitingToPlay,
                                        volume: -1,
                                        playlist: { shuffle:0, repeat: 0, duration:0, name:'', current: -1, count:0, timestamp:0},
-                                       current: { canseek: 0, time: 0, duration: 0 }
+                                       current: { canseek: 0, time: 0, duration: 0 },
+                                       will_sleep_in: data.result.will_sleep_in
                                      };
 
                         player.volume = data.result["mixer volume"];
